Source/WebCore/platform/mediastream/RealtimeVideoCaptureSource.cpp
@@ -34,10 +34,6 @@
 #include "RemoteVideoSample.h"
 #include <wtf/JSONValues.h>
 
-#if PLATFORM(COCOA)
-#include "ImageTransferSessionVT.h"
-#endif
-
 namespace WebCore {
 
 RealtimeVideoCaptureSource::RealtimeVideoCaptureSource(String&& name, String&& id, String&& hashSalt)
@@ -376,7 +372,7 @@ void RealtimeVideoCaptureSource::setSizeAndFrameRate(Optional<int> width, Option
     setFrameRate(match->requestedFrameRate);
 }
 
-RefPtr<MediaSample> RealtimeVideoCaptureSource::adaptVideoSample(MediaSample& sample)
+void RealtimeVideoCaptureSource::dispatchMediaSampleToObservers(MediaSample& sample)
 {
     MediaTime sampleTime = sample.presentationTime();
 
@@ -390,33 +386,7 @@ RefPtr<MediaSample> RealtimeVideoCaptureSource::adaptVideoSample(MediaSample& sa
     if (interval > 1)
         m_observedFrameRate = (m_observedFrameTimeStamps.size() / interval);
 
-    auto mediaSample = makeRefPtr(&sample);
-
-#if PLATFORM(COCOA)
-    auto size = this->size();
-    if (!size.isEmpty() && size != expandedIntSize(sample.presentationSize())) {
-
-        if (!m_imageTransferSession || m_imageTransferSession->pixelFormat() != sample.videoPixelFormat())
-            m_imageTransferSession = ImageTransferSessionVT::create(sample.videoPixelFormat());
-
-        ASSERT(m_imageTransferSession);
-        if (m_imageTransferSession) {
-            mediaSample = m_imageTransferSession->convertMediaSample(sample, size);
-            if (!mediaSample) {
-                ASSERT_NOT_REACHED();
-                return nullptr;
-            }
-        }
-    }
-#endif
-
-    return mediaSample.releaseNonNull();
-}
-
-void RealtimeVideoCaptureSource::dispatchMediaSampleToObservers(MediaSample& sample)
-{
-    if (auto mediaSample = adaptVideoSample(sample))
-        videoSampleAvailable(*mediaSample);
+    videoSampleAvailable(sample);
 }
 
 void RealtimeVideoCaptureSource::clientUpdatedSizeAndFrameRate(Optional<int> width, Optional<int> height, Optional<double> frameRate)
@@ -427,9 +397,10 @@ void RealtimeVideoCaptureSource::clientUpdatedSizeAndFrameRate(Optional<int> wid
         width = { };
     if (height && *height < static_cast<int>(settings.height()))
         height = { };
+    if (frameRate && *frameRate < static_cast<double>(settings.frameRate()))
+        frameRate = { };
 
-    // FIXME: handle frameRate potential increase.
-    if (!width && !height)
+    if (!width && !height && !frameRate)
         return;
 
     auto match = bestSupportedSizeAndFrameRate(width, height, frameRate);
